fixed scroll overflow for contentHolder

--- a/public/home2.css
+++ b/public/home2.css
@@ -50,7 +50,6 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     gap:5rem;
-    overflow-x:hidden;
 }
 /*************** MUSIC CARD ***************/
 .musicCard{
